# City-Growth-AI-Agent

./: .env  .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_FIX_PLAN.md  README.md  README_VISUALIZATION.md  afk-ralph.sh  debug_conversation.py  langsmith_trace.py  models.py  pyproject.toml  sql_agent.py  test_performance.py  test_visualization_questions.txt  validator.py  visualization_agent.py  visualization_nodes.py
.cursor/: mcp.json
ETL/: get_wages_emp_qcew.R  get_wages_emp_qcew_download.R  msa_wages_employment_data.csv
api/: __init__.py  app.py  chat.py  models.py  service.py
database/: 01_analyze_duplicates.sql  02_deduplicate_area_titles.sql  03_verify_deduplication.sql  04_add_indexes.sql  DB_README.md  init_app_db.sql
docs/: AGENT_DESIGN_REFERENCE.md  ARCHITECTURE_REFACTOR_PLAN.md  IMPLEMENTATION_PLAN.md  ISSUE_9_FIX_PLAN.md  OG_ARCHITECTURE_DECISIONS.md  OG_IMPLEMENTATION_CHECKLIST.md  PHASE2_IMPLEMENTATION_PLAN.md  QCEW Data Notes.md  QUICK_START.md  README_SQL_AGENT.md  SQL_AGENT_DESIGN.md  VISUALIZATION_IMPLEMENTATION_PLAN.md  VIZ_IMPLEMENTATION_SUMMARY.md  schema_caching.md
evals/: run_evaluation.py
frontend/: index.html  package-lock.json  package.json
old/: sql_agent.py
references/: express_workflow_hts.py  visualize_graph.py
scripts/: graph_wage_vs_emp.py  graph_wage_vs_emp.r  langsmith_trace.py  start_server.sh
src/: agent.py  checkpointer.py  cli.py  conversation.py  db.py  logger.py  models.py  prompts.py  runner.py  sql_tools.py  state.py  validator.py  visualization_agent.py  visualization_nodes.py  (+1 more)
(+40 files in other folders)
